# synth-project

./: .gitignore  CMakeLists.txt
backwards/: CNN-DCTOnly.py  CNN-ExpDownsampling.py  CNN-WaveletMFCCs.py  CNN-WholeScaleogram.py  CNN.py  MFCC test.ipynb  test.ipynb
backwards/DCTOnlyEvaluation/: 78 in.txt  78 out.txt
backwards/waves/: basic flute.txt
synth/: Config.h  Synth.cpp  Synth.h  main.cpp
synth/stk/: ADSR.cpp  BiQuad.h  BlitSaw.h  BlitSquare.h  FileWrite.cpp  Generator.h  Oscillator.h  PoleZero.h  Recorder.cpp  Recorder.h  STK Licence.txt  SineWave.cpp  SineWave.h
